kubernetes-flux/hci-blade/finance/sure/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sure
spec:
  hostnames:
    - "sure.${DOMAIN_INTERNAL}"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: domain-internal
      namespace: gateway-system
      sectionName: default
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sure
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
